
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int del_timer (int *) ;
 int sclp_con_lock ;
 scalar_t__ sclp_con_queue_running ;
 int sclp_con_timer ;
 int sclp_sync_wait () ;
 int spin_lock_irqsave (int *,unsigned long) ;
 int spin_unlock_irqrestore (int *,unsigned long) ;
 scalar_t__ timer_pending (int *) ;

__attribute__((used)) static void sclp_console_sync_queue(void)
{
 unsigned long flags;

 spin_lock_irqsave(&sclp_con_lock, flags);
 if (timer_pending(&sclp_con_timer))
  del_timer(&sclp_con_timer);
 while (sclp_con_queue_running) {
  spin_unlock_irqrestore(&sclp_con_lock, flags);
  sclp_sync_wait();
  spin_lock_irqsave(&sclp_con_lock, flags);
 }
 spin_unlock_irqrestore(&sclp_con_lock, flags);
}
