; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_sclp_con.c_sclp_console_sync_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_sclp_con.c_sclp_console_sync_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sclp_con_lock = common dso_local global i32 0, align 4
@sclp_con_timer = common dso_local global i32 0, align 4
@sclp_con_queue_running = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sclp_console_sync_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sclp_console_sync_queue() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* %1, align 8
  %3 = call i32 @spin_lock_irqsave(i32* @sclp_con_lock, i64 %2)
  %4 = call i64 @timer_pending(i32* @sclp_con_timer)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @del_timer(i32* @sclp_con_timer)
  br label %8

8:                                                ; preds = %6, %0
  br label %9

9:                                                ; preds = %12, %8
  %10 = load i64, i64* @sclp_con_queue_running, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %9
  %13 = load i64, i64* %1, align 8
  %14 = call i32 @spin_unlock_irqrestore(i32* @sclp_con_lock, i64 %13)
  %15 = call i32 (...) @sclp_sync_wait()
  %16 = load i64, i64* %1, align 8
  %17 = call i32 @spin_lock_irqsave(i32* @sclp_con_lock, i64 %16)
  br label %9

18:                                               ; preds = %9
  %19 = load i64, i64* %1, align 8
  %20 = call i32 @spin_unlock_irqrestore(i32* @sclp_con_lock, i64 %19)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @timer_pending(i32*) #1

declare dso_local i32 @del_timer(i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @sclp_sync_wait(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
